<resources>
    <string name="app_name">Quản lý phòng trọ</string>
    <string name="action_settings">Settings</string>
    <string name="database_name">house_rental.db</string>
    <string name="deep_linking_app_scheme">commonframe</string>
    <string name="deep_linking_http_scheme">http</string>
    <string name="deep_linking_http_host">www.commonframe.com</string>
    <string name="deep_linking_app_host">start</string>
    <string name="error_internet_unavailable_title">Connection Error</string>
    <string name="error_internet_unavailable_message">Internet is unavailable, please check your connection!</string>
    <string name="fetchable_pull_to_refresh">Pull to refresh</string>
    <string name="fetchable_release_to_refresh">Release to refresh</string>
    <string name="fetchable_refreshing">Refreshing…</string>
    <string name="fetchable_last_updated">Updated: %1$s</string>
    <string name="error_parsing_fail">Parsing Failed!</string>
    <string name="error_connection_fail">Connection Failed!</string>
    <string name="error_auth_fail">Authentication Failed!</string>
    <string name="error_server_fail">Server Failed!</string>
    <string name="error_conneciton_time_out">Connection Time Out!</string>
    <string name="error_unknown">Unknown Error!</string>
    <string name="alert_dialog_bt_ok">OK</string>
    <string name="alert_dialog_tv_title_default">WARNING</string>
    <string name="alert_dialog_tv_message_default">Error occurs.</string>
    <string name="alert_dialog_img_des">Alert Dialog Image Icon</string>
    <string name="decision_dialog_bt_yes">YES</string>
    <string name="decision_dialog_bt_no">NO</string>
    <string name="decision_dialog_tv_title_default">ACTION</string>
    <string name="decision_dialog_tv_message_default">Do you want to complete this action?</string>
    <string name="loading_dialog_tv">Xin chờ...&#8230;</string>
    <string name="options_dialog_button_icon_description">Common Button</string>
    <string name="options_dialog_icon_description">Common Button</string>
    <string name="notification_bt_cancel">Cancel</string>
    <string name="notification_bt_ok">OK</string>
    <string name="common_ok">Đồng ý</string>
    <string name="common_cancel">Bỏ qua</string>
    <string name="common_yes">Có</string>
    <string name="common_no">Không</string>
    <string name="common_save">Lưu dữ liệu</string>
    <string name="common_backup">Sao chép dữ liệu</string>
    <string name="common_restore">Phục hồi dữ liệu</string>
    <string name="common_floor">Tầng</string>
    <string name="common_room">Phòng</string>
    <string name="common_user">Khách</string>
    <string name="common_device">Thiết bị</string>
    <string name="common_edit">Chỉnh sửa</string>
    <string name="common_delete">Xoá</string>
    <string name="common_detail">Chi tiết</string>
    <string name="common_area_unit">m²</string>
    <string name="common_cubic_unit">m³</string>
    <string name="common_money_unit">VNĐ</string>
    <string name="common_money_thousand">%d,000 VNĐ</string>
    <string name="common_thousand_text">,000 VNĐ</string>
    <string name="common_unknown">Chưa xác định</string>
    <string name="common_electric_price_title">Hệ số tiền điện (VNĐ / KW):</string>
    <string name="common_water_price_title">Hệ số tiền nước (VNĐ / m³):</string>
    <string name="common_waste_price_title">Hệ số tiền rác (VNĐ / Người):</string>
    <string name="common_device_price_title">Hệ số tiền thiết bị Wifi (VNĐ / Máy):</string>
    <string name="common_deposit_title">Hệ số tiền cọc (VNĐ / Phòng):</string>
    <string name="common_paid_date_title">Ngày thanh toán:</string>
    <string name="common_owner_title">Người quản lý và thu tiền hiện tại:</string>
    <string name="common_room_type_normal">Phòng bình thường</string>
    <string name="common_room_type_front">Phòng mặt tiền</string>
    <string name="common_room_choose_floor">Chọn tầng</string>
    <string name="common_room_choose_type">Chọn loại phòng</string>
    <string name="common_room_type_text">Loại: %1$s - Giá: %2$s</string>
    <string name="common_room_insert_type">Thêm loại phòng mới</string>
    <string name="common_user_choose_room">Chọn phòng</string>
    <string name="common_user_choose_career">Chọn nghề nghiệp</string>
    <string name="common_user_choose_dob">Chọn ngày tháng năm sinh</string>
    <string name="common_setting_choose_payer">Chọn người thanh toán tiền</string>
    <string name="common_setting_choose_paid_date">Chọn ngày thanh toán tiền</string>
    <string name="application_floor_update_dialog_title">Chỉnh sửa tầng</string>
    <string name="application_floor_insert_dialog_title">Thêm tầng mới</string>
    <string name="application_device_insert_dialog_title">Thêm thiết bị mới</string>
    <string name="application_device_update_dialog_title">Chỉnh sửa thiết bị</string>
    <string name="application_owner_insert_dialog_title">Thêm người quản lý mới</string>
    <string name="application_owner_update_dialog_title">Chỉnh sửa thông tin người quản lý</string>
    <string name="application_room_type_insert_dialog_title">Thêm loại phòng mới</string>
    <string name="application_room_type_update_dialog_title">Chỉnh sửa loại phòng</string>
    <string name="application_alert_dialog_title">Thông báo</string>
    <string name="application_alert_dialog_error_general">Có lỗi xảy ra, xin thử lại!</string>
    <string name="application_alert_dialog_backup_success">Sao lưu dữ liệu thành công!</string>
    <string name="application_alert_dialog_restore_confirm">Bạn muốn cập nhật dữ liệu, dữ liệu trong chương trình sẽ bị xoá và không thể phục hồi, bạn chắc chắn?\nChương trình sẽ khởi động lại sau khi cập nhật dữ liệu!</string>
    <string name="application_exit_dialog_title">Thoát chương trình</string>
    <string name="application_exit_dialog_message">Bạn có muốn thoát khỏi chương trình không?</string>
    <string name="application_clipboard_message">Đã lưu %s vào bộ nhớ tạm!</string>
    <string name="application_wrong_timezone_message">Sai múi giờ, hãy chọn múi giờ Việt Nam để sử dụng chương trình</string>
    <string name="application_wrong_locale_message">Sai ngôn ngữ, hãy chọn tiếng Việt để sử dụng chương trình</string>
    <string name="delete_dialog_title">Xoá %s</string>
    <string name="delete_dialog_message">Bạn có muốn xoá %s ra khỏi dữ liệu?</string>
    <string name="delete_floor_dialog_message">Dữ liệu về Thiết bị, Khách và Phòng của tầng này cũng sẽ bị xoá và không thể phục hồi. Bạn chắc chắn?</string>
    <string name="delete_floor_error_dialog_message">Bạn chỉ có thể xoá tầng cao nhất, xin thử lại!</string>
    <string name="delete_room_dialog_message">Dữ liệu về Thiết bị và Khách của phòng này cũng sẽ bị xoá và không thể phục hồi. Bạn chắc chắn?</string>
    <string name="delete_user_dialog_message">Dữ liệu về Thiết bị của khách này cũng sẽ bị xoá và không thể phục hồi. Bạn chắc chắn?</string>
    <string name="delete_room_type_dialog_message">Dữ liệu về loại phòng này sẽ bị xoá và không thể phục hồi. Bạn chắc chắn?</string>
    <string name="delete_owner_dialog_message">Dữ liệu về người quản lý này sẽ bị xoá và không thể phục hồi. Bạn chắc chắn?</string>
    <string name="main_header_home">Trang chủ</string>
    <string name="main_header_floor">Danh sách tầng</string>
    <string name="main_header_floor_insert">Tạo tầng mới</string>
    <string name="main_header_room">Danh sách phòng trọ</string>
    <string name="main_header_room_insert">Tạo phòng mới</string>
    <string name="main_header_payment_history">Lịch sử thanh toán</string>
    <string name="main_header_user">Danh sách khách trọ</string>
    <string name="main_header_user_insert">Thêm khách trọ mới</string>
    <string name="main_header_setting">Cài đặt</string>
    <string name="main_header_calculator">Máy tính</string>
    <string name="home_create_payment">Tạo lượt thanh toán</string>
    <string name="home_general_infor_title">Thông tin chung</string>
    <string name="home_floor_info">Số tầng: %d tầng</string>
    <string name="home_room_info">Số phòng: %1$d phòng (đã cho thuê %2$d phòng)</string>
    <string name="home_user_info">Số khách trọ: %1$d khách (%2$d Nam, %3$d Nữ)</string>
    <string name="home_registered_user_info">Đã đăng ký tạm trú: %d khách</string>
    <string name="home_device_info">Số thiết bị wifi: %d thiết bị</string>
    <string name="home_water_electric_total_info">Tổng thu tiền nước và điện tháng trước: %s</string>
    <string name="home_day_counter">Còn %1$s ngày là hết tháng %2$s</string>
    <string name="home_unpaid_room_counter">Còn %s phòng chưa thanh toán</string>
    <string name="home_none_unpaid_room_counter">Tất cả phòng đã thanh toán</string>
    <string name="floor_item_more">Thêm tầng mới...</string>
    <string name="floor_insert_success">Đã thêm tầng mới thành công: %s!</string>
    <string name="floor_update_success">Đã cập nhật tầng mới thành công: %s!</string>
    <string name="floor_name_title">Tầng:</string>
    <string name="floor_name_hint">Nhập tên tầng</string>
    <string name="floor_device_count">Có %d thiết bị</string>
    <string name="floor_user_count">Có %d khách trọ</string>
    <string name="floor_room_count">Có %1$d trong %2$d phòng đã cho thuê</string>
    <string name="room_item_more">Thêm phòng mới...</string>
    <string name="room_device_count">Có %d thiết bị</string>
    <string name="room_user_count">Có %d khách trọ</string>
    <string name="room_status_line_rented">%s - Đã cho thuê</string>
    <string name="room_status_line_unrented">%s - Chưa cho thuê</string>
    <string name="user_item_more">Thêm khách mới...</string>
    <string name="room_general_infor_title">Thông tin chung</string>
    <string name="room_rent_infor_title">Thông tin hiện tại</string>
    <string name="room_floor_title">Tầng:</string>
    <string name="room_id_title">Mã phòng:</string>
    <string name="room_name_title">Tên phòng:</string>
    <string name="room_area_title">Diện tích:</string>
    <string name="room_electric_title">Số điện:</string>
    <string name="room_water_title">Số nước:</string>
    <string name="room_deposit_title">Đặt cọc:</string>
    <string name="room_type_title">Loại phòng:</string>
    <string name="room_rented_title">Tình trạng phòng:</string>
    <string name="room_rented_text">Đã thuê</string>
    <string name="room_not_rented_text">Chưa thuê</string>
    <string name="room_insert_name_hint">Nhập tên phòng</string>
    <string name="room_insert_area_hint">Nhập diện tích phòng</string>
    <string name="room_insert_electric_hint">Nhập số điện</string>
    <string name="room_insert_water_hint">Nhập số nước</string>
    <string name="setting_room_type_name_title">Tên loại phòng:</string>
    <string name="setting_room_type_name_hint">Nhập tên loại phòng</string>
    <string name="setting_room_type_price_title">Giá tiền loại phòng:</string>
    <string name="setting_room_type_change_title">Chuyển phòng loại này sang loại phòng:</string>
    <string name="setting_room_type_price_hint">Nhập giá tiền loại phòng</string>
    <string name="setting_wifi_host_insert_dialog_title">Thêm cổng wifi mới</string>
    <string name="setting_wifi_host_name_title">Địa chỉ host wifi:</string>
    <string name="setting_wifi_host_name_hint">Nhập địa chỉ host wifi</string>
    <string name="setting_wifi_host_username_title">Tên đăng nhập admin:</string>
    <string name="setting_wifi_host_username_hint">Nhập tên đăng nhập admin</string>
    <string name="setting_wifi_host_password_title">Mật khẩu đăng nhập admin:</string>
    <string name="setting_wifi_host_password_hint">Nhập mật khẩu đăng nhập admin</string>
    <string name="setting_wifi_host_MAC_title">Địa chỉ MAC host wifi:</string>
    <string name="setting_wifi_host_MAC_hint">Nhập địa chỉ MAC host wifi</string>
    <string name="setting_wifi_host_PIN_title">Mật khẩu mặc định host wifi:</string>
    <string name="setting_wifi_host_PIN_hint">Nhập mật khẩu mặc định host wifi</string>
</resources>