<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingEnd="25dp"
    android:paddingStart="25dp"
    android:paddingTop="10dp">

    <com.example.houserental.function.view.HouseRentalTextView
        android:id="@+id/dialog_room_type_insert_tv_title"
        style="@style/screen_header"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:text="@string/application_room_type_insert_dialog_title" />

    <com.example.houserental.function.view.HouseRentalTextView
        style="@style/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/setting_room_type_name_title" />

    <com.example.houserental.function.view.HouseRentalEditText
        android:id="@+id/dialog_room_type_insert_et_name"
        style="@style/normal_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/setting_room_type_name_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="30" />

    <com.example.houserental.function.view.HouseRentalTextView
        style="@style/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/setting_room_type_price_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <com.example.houserental.function.view.HouseRentalEditText
            android:id="@+id/dialog_room_type_insert_et_price"
            style="@style/normal_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/setting_room_type_price_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="4" />

        <com.example.houserental.function.view.HouseRentalTextView
            style="@style/normal_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/common_thousand_text" />

    </LinearLayout>

    <com.example.houserental.function.view.HouseRentalTextView
        android:id="@+id/dialog_room_type_insert_tv_change"
        style="@style/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/setting_room_type_change_title" />

    <Spinner
        android:id="@+id/dialog_room_type_insert_sn_change"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:spinnerMode="dropdown" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.example.houserental.function.view.HouseRentalButton
            android:id="@+id/dialog_room_type_insert_bt_ok"
            style="@style/normal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/common_ok" />

        <com.example.houserental.function.view.HouseRentalButton
            android:id="@+id/dialog_room_type_insert_bt_cancel"
            style="@style/normal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_cancel" />

    </LinearLayout>
</LinearLayout>