<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/room_floor_title" />

                <Spinner
                    android:id="@+id/fragment_room_edit_sn_floor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/room_id_title" />

                <EditText
                    android:id="@+id/fragment_room_edit_et_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:enabled="false"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/room_name_title" />

                <EditText
                    android:id="@+id/fragment_room_edit_et_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="@string/room_insert_name_hint"
                    android:imeOptions="flagNavigateNext"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textColorHint="@color/Red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/room_area_title" />

                <EditText
                    android:id="@+id/fragment_room_edit_et_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:hint="@string/room_insert_area_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:textColorHint="@color/Red" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/common_area_unit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/room_electric_title" />

                <EditText
                    android:id="@+id/fragment_room_edit_et_electric"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="@string/room_insert_electric_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:textColorHint="@color/Red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/room_water_title" />

                <EditText
                    android:id="@+id/fragment_room_edit_et_water"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:hint="@string/room_insert_water_hint"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:textColorHint="@color/Red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/room_type_title" />

                <Spinner
                    android:id="@+id/fragment_room_edit_sn_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/room_rented_title" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <ToggleButton
                        android:id="@+id/fragment_room_edit_tg_rented"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textOff="@string/room_not_rented_text"
                        android:textOn="@string/room_rented_text" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/fragment_room_edit_tv_rented_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="4" />
            </LinearLayout>

            <Button
                android:id="@+id/fragment_room_edit_bt_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/common_save" />

            <Button
                android:id="@+id/fragment_room_edit_bt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/common_cancel" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>