<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/normal_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.example.houserental.function.view.HouseRentalTextView
        android:id="@+id/dialog_floor_update_tv_title"
        style="@style/screen_header"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/application_floor_update_dialog_title" />


    <com.example.houserental.function.view.HouseRentalTextView
        style="@style/header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/floor_name_title" />

    <com.example.houserental.function.view.HouseRentalEditText
        android:id="@+id/dialog_floor_update_et_name"
        style="@style/normal_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/floor_name_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.example.houserental.function.view.HouseRentalButton
            android:id="@+id/dialog_floor_update_bt_ok"
            style="@style/normal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/common_ok" />

        <com.example.houserental.function.view.HouseRentalButton
            android:id="@+id/dialog_floor_update_bt_cancel"
            style="@style/normal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_cancel" />

    </LinearLayout>
</LinearLayout>